--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,3 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 .cursor-hover:hover {
     cursor: pointer;
 }
+
+#budgetSelector .selected {
+    background-color: red;
+}
