--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,5 +13,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #budgetSelector .selected {
-    background-color: red;
+    border-color: rgb(13, 110, 253) !important;
 }
