--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .cursor-hover:hover {
